# delfos-etl

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
etl/: Dockerfile  dagster.yaml  example.env  pyproject.toml  workspace.yaml
etl/etl/: definitions.py
etl/etl/assets/: constants.py  signal.py
etl/etl/jobs/: __init__.py
etl/etl/partitions/: __init__.py
etl/etl/resources/: __init__.py  postgres_resource.py  source_db_connector.py
etl/etl/schedules/: __init__.py
source_db/: .dockerignore  Dockerfile  example.env  pyproject.toml
source_db/scripts/: 001_init_source_db.sh  002_populate_source_db.sh  dados_10_dias.csv
source_db/src/source_db_api/: db_connection.py  main.py  repository.py  services.py
target_db/: Dockerfile  create_tables.py
target_db/scripts/: 001_init_target_db.sh
