[tool.poetry]
name = "etl"
version = "0.1.0"
description = ""
authors = ["Luis Malta <luiso.malta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
dagster = "^1.9.2"
dagster-webserver = "^1.9.2"
sqlalchemy = "^2.0.36"
httpx = "^0.27.2"
pandas = "^2.2.3"
dagster-postgres = "^0.25.2"

[tool.dagster]
module_name = "etl.definitions"
project_name = "etl"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


